--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.0.0",
     "sass-loader": "^4.0.2",
     "vue": "^2.1.0",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1",
     "vuex": "^2.0.0"
   },
