--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-register": "^6.0.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
     "eslint": "^3.7.1",
     "eslint-config-airbnb-base": "^8.0.0",
